commit for leave report changes

--- a/MitosisTimesheet/src/main/webapp/reports/LeaveReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/LeaveReport.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="91"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
 	<field name="employee.name" class="java.lang.String"/>
@@ -12,6 +12,7 @@
 	<variable name="noofdays" class="java.lang.Integer" resetType="Group" resetGroup="employee name" calculation="Sum">
 		<variableExpression><![CDATA[$F{noOfDays}]]></variableExpression>
 	</variable>
+	<variable name="variable1" class="java.lang.String"/>
 	<group name="employee name">
 		<groupExpression><![CDATA[$F{employee.name}]]></groupExpression>
 		<groupHeader>
@@ -71,7 +72,7 @@
 				<staticText>
 					<reportElement x="288" y="3" width="100" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[No of Days]]></text>
+					<text><![CDATA[Total leave]]></text>
 				</staticText>
 				<textField>
 					<reportElement x="424" y="3" width="100" height="20"/>
@@ -87,9 +88,11 @@
 	<title>
 		<band height="72" splitType="Stretch">
 			<staticText>
-				<reportElement x="179" y="8" width="275" height="20"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[Mitosis Timesheet - Leave Report]]></text>
+				<reportElement x="152" y="8" width="269" height="32"/>
+				<textElement textAlignment="Center">
+					<font size="18"/>
+				</textElement>
+				<text><![CDATA[Mitosis - Leave Report]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="106" y="40" width="55" height="20"/>
