--- a/MitosisTimesheet/src/main/webapp/css/style.css
+++ b/MitosisTimesheet/src/main/webapp/css/style.css
@@ -58,6 +58,22 @@ a {
 /*MItosis Timesheet*/
 
  /*MItosis Timesheet*/
+.txtarea{
+	margin-top:-20px;
+}
+.padd-wb{
+	padding: 10px 180px 10px 180px ! important;
+}
+.whitebox{ 
+	width: 100%; 
+	background-color: #FFFFFF; 
+	height: auto; 
+	padding: 20px; box-shadow: 0px 0px 2px rgba(0,0,0,0.2); 
+	border-radius: 3px; 
+	margin: 10px 0px; 
+	float: left;
+}.textleft{text-align: left ! important;}
+.textleft > span{float: right;}
 
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
 	color: white; font-weight: bold; background: none; font-size: 18px;	
