--- a/MitosisTimesheet/src/main/webapp/reports/InvoiceReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/InvoiceReport.jrxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="InvoiceReport" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="InvoiceReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="240"/>
-	<field name="field1" class="java.lang.String"/>
+	<property name="ireport.y" value="144"/>
+	<field name="invoiceHdr.invoiceNumber" class="java.lang.String"/>
+	<field name="invoiceHdr.project.projectName" class="java.lang.String"/>
+	<field name="invoiceHdr.customer.customerName" class="java.lang.String"/>
+	<field name="invoiceHdr.invoiceDate" class="java.util.Date"/>
+	<field name="invoiceHdr.createdDate" class="java.util.Date"/>
+	<field name="invoiceHdr.invoiceAmount" class="java.math.BigDecimal"/>
+	<field name="invoiceDetailsModel.description" class="java.lang.String"/>
+	<field name="invoiceDetailsModel.teammember" class="java.lang.String"/>
+	<field name="invoiceDetailsModel.invoiceFromDate" class="java.util.Date"/>
+	<field name="invoiceDetailsModel.invoiceToDate" class="java.util.Date"/>
+	<field name="invoiceDetailsModel.ratePerHour" class="java.math.BigDecimal"/>
+	<field name="invoiceDetailsModel.billableHours" class="java.math.BigDecimal"/>
+	<field name="invoiceDetailsModel.totalAmount" class="java.lang.String"/>
+	<field name="companyInfo.companyName" class="java.lang.String"/>
+	<field name="companyInfo.companyAddress" class="java.lang.String"/>
+	<field name="companyInfo.phoneNumber" class="java.lang.String"/>
+	<field name="companyInfo.bankName" class="java.lang.String"/>
+	<field name="companyInfo.bankAddress" class="java.lang.String"/>
+	<field name="companyInfo.accountNumber" class="java.lang.String"/>
+	<field name="companyInfo.ifscCode" class="java.lang.String"/>
+	<field name="companyInfo.micrCode" class="java.lang.String"/>
+	<field name="companyInfo.swiftCode" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="37" splitType="Stretch">
+		<band height="42" splitType="Stretch">
 			<textField>
 				<reportElement x="167" y="0" width="223" height="37"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -21,7 +42,7 @@
 	<pageHeader>
 		<band height="96" splitType="Stretch">
 			<textField>
-				<reportElement x="22" y="56" width="107" height="21"/>
+				<reportElement x="23" y="75" width="107" height="21"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Phone No"]]></textFieldExpression>
 			</textField>
@@ -29,74 +50,89 @@
 				<reportElement x="378" y="0" width="155" height="77"/>
 			</image>
 			<textField>
-				<reportElement x="22" y="0" width="107" height="20"/>
+				<reportElement x="22" y="0" width="107" height="39"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Company Name"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="22" y="20" width="107" height="36"/>
+				<reportElement x="23" y="39" width="107" height="36"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Company Address"]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="-20" y="95" width="575" height="1"/>
 			</line>
+			<textField>
+				<reportElement x="130" y="0" width="190" height="39"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.companyName}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="129" y="75" width="191" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.phoneNumber}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="130" y="39" width="190" height="36"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.companyAddress}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="233" splitType="Stretch">
+		<band height="232" splitType="Stretch">
 			<textField>
-				<reportElement x="22" y="14" width="107" height="26"/>
+				<reportElement x="22" y="14" width="100" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Project Name"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Project Name:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="22" y="52" width="107" height="26"/>
+				<reportElement x="22" y="52" width="100" height="40"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Customer Name"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Customer Name:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="271" y="40" width="107" height="26"/>
+				<reportElement x="310" y="40" width="107" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Inovice Number"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Inovice Number:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="22" y="92" width="107" height="26"/>
+				<reportElement x="22" y="99" width="100" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["From Date"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Date:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="271" y="92" width="107" height="26"/>
+				<reportElement x="309" y="92" width="93" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["To Date"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Created Date:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="22" y="145" width="107" height="26"/>
+				<reportElement x="22" y="145" width="100" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Currency"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="271" y="145" width="107" height="26"/>
+				<reportElement x="310" y="145" width="92" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Amount"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Amount:"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="-38" y="187" width="629" height="1"/>
+				<reportElement x="-38" y="188" width="593" height="1"/>
 			</line>
 			<line>
-				<reportElement x="-65" y="231" width="657" height="1"/>
+				<reportElement x="-65" y="231" width="620" height="1"/>
 			</line>
 			<line>
-				<reportElement x="105" y="186" width="1" height="46"/>
+				<reportElement x="105" y="189" width="1" height="43"/>
 			</line>
 			<line>
-				<reportElement x="177" y="186" width="1" height="46"/>
+				<reportElement x="178" y="189" width="1" height="43"/>
 			</line>
 			<line>
-				<reportElement x="244" y="186" width="1" height="46"/>
+				<reportElement x="244" y="189" width="1" height="43"/>
 			</line>
 			<line>
-				<reportElement x="319" y="186" width="1" height="46"/>
+				<reportElement x="319" y="189" width="1" height="43"/>
 			</line>
 			<line>
 				<reportElement x="400" y="186" width="1" height="46"/>
@@ -122,7 +158,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["To Date"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="245" y="188" width="74" height="44"/>
+				<reportElement x="245" y="189" width="73" height="43"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Team Member"]]></textFieldExpression>
 			</textField>
@@ -132,21 +168,51 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["Rate Per Hour"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="402" y="188" width="86" height="44"/>
+				<reportElement x="402" y="189" width="85" height="43"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Billable Hour"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="487" y="202" width="84" height="20"/>
+				<reportElement x="487" y="202" width="68" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Total Amount"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="24" y="192" width="1" height="39"/>
+				<reportElement x="24" y="189" width="1" height="42"/>
 			</line>
 			<line>
 				<reportElement x="488" y="187" width="1" height="43"/>
 			</line>
+			<textField>
+				<reportElement x="417" y="40" width="138" height="26"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceHdr.invoiceNumber}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="122" y="14" width="168" height="26"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceHdr.project.projectName}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="122" y="52" width="168" height="40"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceHdr.customer.customerName}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="402" y="145" width="153" height="26"/>
+				<textElement/>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{invoiceHdr.invoiceAmount}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="122" y="92" width="168" height="33"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceHdr.invoiceDate})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="402" y="92" width="152" height="26"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceHdr.createdDate})]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnHeader>
 	<detail>
@@ -164,7 +230,7 @@
 				<reportElement x="400" y="-1" width="1" height="47"/>
 			</line>
 			<line>
-				<reportElement x="-57" y="47" width="629" height="1"/>
+				<reportElement x="-57" y="47" width="612" height="1"/>
 			</line>
 			<line>
 				<reportElement x="24" y="0" width="1" height="46"/>
@@ -173,47 +239,109 @@
 				<reportElement x="105" y="-1" width="1" height="47"/>
 			</line>
 			<line>
-				<reportElement x="177" y="0" width="1" height="46"/>
+				<reportElement x="178" y="0" width="1" height="46"/>
 			</line>
 			<line>
 				<reportElement x="488" y="1" width="1" height="45"/>
 			</line>
-			<line>
-				<reportElement x="486" y="-4" width="1" height="36"/>
-			</line>
+			<textField>
+				<reportElement x="320" y="1" width="80" height="45"/>
+				<textElement/>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{invoiceDetailsModel.ratePerHour}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="402" y="1" width="85" height="45"/>
+				<textElement/>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{invoiceDetailsModel.billableHours}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="487" y="8" width="67" height="34"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceDetailsModel.totalAmount}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="105" y="0" width="73" height="46"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceDetailsModel.invoiceFromDate})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="179" y="4" width="65" height="44"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceDetailsModel.invoiceToDate})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="25" y="0" width="80" height="46"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceDetailsModel.description}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="245" y="0" width="73" height="48"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceDetailsModel.teammember}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="246" splitType="Stretch">
+		<band height="245" splitType="Stretch">
 			<textField>
-				<reportElement x="22" y="12" width="100" height="20"/>
+				<reportElement x="22" y="12" width="100" height="33"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Bank Name"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Bank Name:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="22" y="122" width="100" height="20"/>
+				<reportElement x="22" y="122" width="100" height="37"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Account Number"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="22" y="182" width="100" height="20"/>
+				<reportElement x="22" y="182" width="100" height="36"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["IFSC Code"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="290" y="122" width="100" height="20"/>
+				<reportElement x="290" y="122" width="100" height="37"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Micr Code"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="290" y="182" width="100" height="20"/>
+				<reportElement x="290" y="182" width="100" height="36"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Swift Code"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="22" y="59" width="100" height="20"/>
+				<reportElement x="22" y="59" width="100" height="33"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Bank Address"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="122" y="12" width="168" height="33"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.bankName}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="122" y="59" width="168" height="33"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.bankAddress}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="122" y="122" width="168" height="37"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.accountNumber}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="122" y="182" width="168" height="36"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.ifscCode}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="390" y="122" width="143" height="37"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.micrCode}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="400" y="182" width="133" height="36"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.swiftCode}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
