--- a/MitosisTimesheet/src/main/webapp/reports/InvoiceReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/InvoiceReport.jrxml
@@ -2,26 +2,27 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="InvoiceReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="144"/>
+	<property name="ireport.y" value="240"/>
+	<parameter name="invoiceDetailsList.description" class="java.lang.String"/>
+	<parameter name="invoiceDetailsList.invoiceFromDate" class="java.util.Date"/>
+	<parameter name="invoiceDetailsList.invoiceToDate" class="java.util.Date"/>
+	<parameter name="invoiceDetailsList.ratePerHour" class="java.math.BigDecimal"/>
+	<parameter name="invoiceDetailsList.billableHours" class="java.lang.Integer"/>
+	<parameter name="invoiceDetailsList.teamMember" class="java.lang.String"/>
+	<parameter name="invoiceDetailsList.totalAmount" class="java.math.BigDecimal"/>
+	<parameter name="invoiceDetailsList" class="java.util.List"/>
 	<field name="invoiceHdr.invoiceNumber" class="java.lang.String"/>
 	<field name="invoiceHdr.project.projectName" class="java.lang.String"/>
 	<field name="invoiceHdr.customer.customerName" class="java.lang.String"/>
 	<field name="invoiceHdr.invoiceDate" class="java.util.Date"/>
 	<field name="invoiceHdr.createdDate" class="java.util.Date"/>
 	<field name="invoiceHdr.invoiceAmount" class="java.math.BigDecimal"/>
-	<field name="invoiceDetailsModel.description" class="java.lang.String"/>
-	<field name="invoiceDetailsModel.teammember" class="java.lang.String"/>
-	<field name="invoiceDetailsModel.invoiceFromDate" class="java.util.Date"/>
-	<field name="invoiceDetailsModel.invoiceToDate" class="java.util.Date"/>
-	<field name="invoiceDetailsModel.ratePerHour" class="java.math.BigDecimal"/>
-	<field name="invoiceDetailsModel.billableHours" class="java.math.BigDecimal"/>
-	<field name="invoiceDetailsModel.totalAmount" class="java.lang.String"/>
 	<field name="companyInfo.companyName" class="java.lang.String"/>
 	<field name="companyInfo.companyAddress" class="java.lang.String"/>
 	<field name="companyInfo.phoneNumber" class="java.lang.String"/>
 	<field name="companyInfo.bankName" class="java.lang.String"/>
 	<field name="companyInfo.bankAddress" class="java.lang.String"/>
-	<field name="companyInfo.accountNumber" class="java.lang.String"/>
+	<field name="companyInfo.accountNumber" class="java.lang.Integer"/>
 	<field name="companyInfo.ifscCode" class="java.lang.String"/>
 	<field name="companyInfo.micrCode" class="java.lang.String"/>
 	<field name="companyInfo.swiftCode" class="java.lang.String"/>
@@ -40,9 +41,9 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="96" splitType="Stretch">
+		<band height="108" splitType="Stretch">
 			<textField>
-				<reportElement x="23" y="75" width="107" height="21"/>
+				<reportElement x="23" y="75" width="107" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Phone No"]]></textFieldExpression>
 			</textField>
@@ -60,27 +61,27 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["Company Address"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="-20" y="95" width="575" height="1"/>
+				<reportElement x="-21" y="99" width="575" height="1"/>
 			</line>
 			<textField>
 				<reportElement x="130" y="0" width="190" height="39"/>
-				<textElement/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.companyName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="129" y="75" width="191" height="20"/>
-				<textElement/>
+				<reportElement x="130" y="75" width="190" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.phoneNumber}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="130" y="39" width="190" height="36"/>
-				<textElement/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.companyAddress}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="232" splitType="Stretch">
+		<band height="233" splitType="Stretch">
 			<textField>
 				<reportElement x="22" y="14" width="100" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
@@ -117,10 +118,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Amount:"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="-38" y="188" width="593" height="1"/>
-			</line>
-			<line>
-				<reportElement x="-65" y="231" width="620" height="1"/>
+				<reportElement x="3" y="187" width="551" height="1"/>
 			</line>
 			<line>
 				<reportElement x="105" y="189" width="1" height="43"/>
@@ -138,7 +136,7 @@
 				<reportElement x="400" y="186" width="1" height="46"/>
 			</line>
 			<textField>
-				<reportElement x="-20" y="202" width="42" height="20"/>
+				<reportElement x="3" y="189" width="19" height="41"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["S.No"]]></textFieldExpression>
 			</textField>
@@ -146,11 +144,6 @@
 				<reportElement x="24" y="202" width="81" height="13"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Description"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="106" y="202" width="71" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["From Date"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="178" y="202" width="66" height="20"/>
@@ -185,38 +178,43 @@
 			</line>
 			<textField>
 				<reportElement x="417" y="40" width="138" height="26"/>
-				<textElement/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceHdr.invoiceNumber}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="122" y="14" width="168" height="26"/>
-				<textElement/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceHdr.project.projectName}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="122" y="52" width="168" height="40"/>
-				<textElement/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceHdr.customer.customerName}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="402" y="145" width="153" height="26"/>
-				<textElement/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{invoiceHdr.invoiceAmount}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="122" y="92" width="168" height="33"/>
-				<textElement/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceHdr.invoiceDate})]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="402" y="92" width="152" height="26"/>
-				<textElement/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceHdr.createdDate})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="106" y="202" width="61" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA["Fromdate"]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="48" splitType="Stretch">
+		<band height="54" splitType="Stretch">
 			<line>
 				<reportElement x="-59" y="1" width="1" height="46"/>
 			</line>
@@ -230,7 +228,7 @@
 				<reportElement x="400" y="-1" width="1" height="47"/>
 			</line>
 			<line>
-				<reportElement x="-57" y="47" width="612" height="1"/>
+				<reportElement x="0" y="47" width="554" height="1"/>
 			</line>
 			<line>
 				<reportElement x="24" y="0" width="1" height="46"/>
@@ -245,40 +243,43 @@
 				<reportElement x="488" y="1" width="1" height="45"/>
 			</line>
 			<textField>
-				<reportElement x="320" y="1" width="80" height="45"/>
-				<textElement/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{invoiceDetailsModel.ratePerHour}]]></textFieldExpression>
+				<reportElement x="25" y="1" width="81" height="49"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{invoiceDetailsList.description}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="402" y="1" width="85" height="45"/>
-				<textElement/>
-				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{invoiceDetailsModel.billableHours}]]></textFieldExpression>
+				<reportElement x="320" y="1" width="82" height="49"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$P{invoiceDetailsList.ratePerHour}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="487" y="8" width="67" height="34"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceDetailsModel.totalAmount}]]></textFieldExpression>
+				<reportElement x="245" y="1" width="74" height="49"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{invoiceDetailsList.teamMember}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="105" y="0" width="73" height="46"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceDetailsModel.invoiceFromDate})]]></textFieldExpression>
+				<reportElement x="106" y="1" width="72" height="45"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($P{invoiceDetailsList.invoiceFromDate})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="179" y="4" width="65" height="44"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceDetailsModel.invoiceToDate})]]></textFieldExpression>
+				<reportElement x="179" y="1" width="66" height="45"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($P{invoiceDetailsList.invoiceFromDate})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="25" y="0" width="80" height="46"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceDetailsModel.description}]]></textFieldExpression>
+				<reportElement x="400" y="0" width="87" height="46"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$P{invoiceDetailsList.billableHours}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="245" y="0" width="73" height="48"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{invoiceDetailsModel.teammember}]]></textFieldExpression>
+				<reportElement x="489" y="1" width="66" height="45"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$P{invoiceDetailsList.totalAmount}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="3" y="1" width="551" height="1"/>
+			</line>
 		</band>
 	</detail>
 	<columnFooter>
@@ -324,11 +325,6 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.bankAddress}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="122" y="122" width="168" height="37"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.accountNumber}]]></textFieldExpression>
-			</textField>
-			<textField>
 				<reportElement x="122" y="182" width="168" height="36"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.ifscCode}]]></textFieldExpression>
@@ -342,6 +338,11 @@
 				<reportElement x="400" y="182" width="133" height="36"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{companyInfo.swiftCode}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="122" y="122" width="158" height="37"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{companyInfo.accountNumber}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
