--- a/MitosisTimesheet/src/main/webapp/css/style.css
+++ b/MitosisTimesheet/src/main/webapp/css/style.css
@@ -1,6 +1,13 @@
 html, body {
 	margin: 0;
 	width: 100%;
+	counter-reset: Serial; 
+}
+
+ tr .dettd:first-child:before
+{
+  counter-increment: Serial;      /* Increment the Serial counter */
+  content: counter(Serial); /* Display the counter */
 }
 
 tbody {
@@ -1810,17 +1817,24 @@ transform:scale(1);
 }
 }
 
-.dettd{
+ .dettd{
 	width: 120px;
 }
+.popup>thead>tr>th{
+	padding: 5px;
+}
 .lm{
-	padding-left: 20px;
+	padding-left: 6px;
 }
 .emp-det-show{
-	width: 500px; height: auto; display: none; top: 30%; left: 30%; z-index: 105; background: white; position: fixed; padding: 8px; box-shadow: 0px 0px 2px rgba(0,0,0,0.2); 
+	width: 500px; height: auto; display: none; top: 20%; left: 30%; z-index: 105; background: white; position: fixed; padding: 5px; box-shadow: 0px 0px 2px rgba(0,0,0,0.2); 
 	border-radius: 3px;
 }
 tbody .scrollit{
     overflow-y: auto;
-    height:80px;
+    height: auto;
+}
+.popuph4{
+	margin-top: 0;
+	margin-bottom: 8px;
 }
