commit for invoice report

--- a/MitosisTimesheet/src/main/webapp/reports/InvoiceReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/InvoiceReport.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="InvoiceReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.1"/>
+	<property name="ireport.zoom" value="4.177248169415659"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="192"/>
+	<property name="ireport.y" value="1786"/>
 	<parameter name="invoiceDetailsList" class="java.lang.Object"/>
 	<parameter name="logoimage" class="java.lang.String">
 		<parameterDescription><![CDATA[]]></parameterDescription>
@@ -33,7 +33,7 @@
 			<textField>
 				<reportElement x="29" y="75" width="107" height="20"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Phone No"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Phone No:"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="29" y="0" width="107" height="39"/>
@@ -43,23 +43,23 @@
 			<textField>
 				<reportElement x="29" y="39" width="107" height="36"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Company Address"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Company Address:"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="-20" y="94" width="595" height="1"/>
+				<reportElement x="-20" y="101" width="595" height="1"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="143" y="6" width="152" height="33"/>
+				<reportElement x="137" y="4" width="153" height="35"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.CompanyInfoModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).companyInfo).getCompanyName()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="144" y="44" width="152" height="33"/>
+				<reportElement x="138" y="40" width="152" height="33"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.CompanyInfoModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).companyInfo).getCompanyAddress()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="144" y="76" width="152" height="23"/>
+				<reportElement x="138" y="76" width="152" height="19"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.CompanyInfoModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).companyInfo).getPhoneNumber()]]></textFieldExpression>
 			</textField>
@@ -72,42 +72,42 @@
 	<columnHeader>
 		<band height="243" splitType="Stretch">
 			<textField>
-				<reportElement x="30" y="14" width="100" height="26"/>
+				<reportElement x="30" y="14" width="106" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Project Name:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="30" y="52" width="99" height="40"/>
+				<reportElement x="30" y="52" width="108" height="40"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Customer Name:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="308" y="40" width="92" height="26"/>
+				<reportElement x="307" y="14" width="101" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Number:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="30" y="99" width="98" height="26"/>
+				<reportElement x="30" y="99" width="108" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Date:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="307" y="92" width="93" height="26"/>
+				<reportElement x="307" y="52" width="101" height="40"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Created Date:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="30" y="145" width="98" height="26"/>
+				<reportElement x="30" y="145" width="108" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Currency:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="310" y="145" width="92" height="26"/>
+				<reportElement x="307" y="99" width="101" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Amount:"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="1" y="187" width="553" height="2"/>
+				<reportElement x="2" y="187" width="552" height="2"/>
 			</line>
 			<line>
 				<reportElement x="105" y="189" width="1" height="54"/>
@@ -177,39 +177,44 @@
 				<reportElement x="2" y="187" width="1" height="56"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="409" y="40" width="131" height="26"/>
+				<reportElement x="409" y="14" width="131" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.InvoiceHdrModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).invoiceHdr).getInvoiceNumber()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="410" y="92" width="131" height="26"/>
+				<reportElement x="409" y="52" width="131" height="40"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format(((com.mitosis.timesheet.model.InvoiceHdrModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).invoiceHdr).getCreatedDate())]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="131" y="14" width="152" height="26"/>
+				<reportElement x="138" y="14" width="152" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.ProjectModel)((com.mitosis.timesheet.model.InvoiceHdrModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).invoiceHdr).getProject()).getProjectName()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="131" y="52" width="152" height="40"/>
+				<reportElement x="138" y="52" width="152" height="40"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.CustomerDetailsModel)((com.mitosis.timesheet.model.InvoiceHdrModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).invoiceHdr).getCustomer()).getCustomerName()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="128" y="99" width="152" height="26"/>
+				<reportElement x="138" y="99" width="152" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format(((com.mitosis.timesheet.model.InvoiceHdrModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).invoiceHdr).getInvoiceDate())]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="409" y="145" width="133" height="26"/>
+				<reportElement x="410" y="99" width="130" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[((com.mitosis.timesheet.model.InvoiceHdrModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).invoiceHdr).getInvoiceAmount()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="138" y="145" width="152" height="26"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.InvoiceHdrModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).invoiceHdr).getCurrencyCode()]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="48" splitType="Stretch">
+		<band height="47" splitType="Stretch">
 			<line>
 				<reportElement x="-59" y="1" width="1" height="46"/>
 			</line>
@@ -220,16 +225,16 @@
 				<reportElement x="244" y="0" width="1" height="46"/>
 			</line>
 			<line>
-				<reportElement x="400" y="-1" width="1" height="47"/>
+				<reportElement x="400" y="-1" width="1" height="46"/>
 			</line>
 			<line>
-				<reportElement x="4" y="47" width="550" height="1"/>
+				<reportElement x="3" y="46" width="551" height="1"/>
 			</line>
 			<line>
 				<reportElement x="24" y="0" width="1" height="46"/>
 			</line>
 			<line>
-				<reportElement x="105" y="-1" width="1" height="47"/>
+				<reportElement x="105" y="-1" width="1" height="46"/>
 			</line>
 			<line>
 				<reportElement x="178" y="0" width="1" height="46"/>
@@ -241,10 +246,10 @@
 				<reportElement x="3" y="1" width="551" height="1"/>
 			</line>
 			<line>
-				<reportElement x="554" y="1" width="1" height="47"/>
+				<reportElement x="554" y="1" width="1" height="45"/>
 			</line>
 			<line>
-				<reportElement x="2" y="0" width="1" height="47"/>
+				<reportElement x="2" y="0" width="1" height="46"/>
 			</line>
 			<textField isBlankWhenNull="true">
 				<reportElement x="244" y="2" width="76" height="44"/>
@@ -306,12 +311,12 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["IFSC Code:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="290" y="122" width="100" height="37"/>
+				<reportElement x="290" y="12" width="100" height="33"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Micr Code:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="290" y="182" width="100" height="36"/>
+				<reportElement x="290" y="59" width="100" height="33"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Swift Code:"]]></textFieldExpression>
 			</textField>
@@ -321,12 +326,12 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["Bank Address:"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="123" y="59" width="152" height="33"/>
+				<reportElement x="122" y="59" width="152" height="33"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.CompanyInfoModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).companyInfo).getBankAddress()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="123" y="12" width="152" height="33"/>
+				<reportElement x="122" y="12" width="152" height="33"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.CompanyInfoModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).companyInfo).getBankName()]]></textFieldExpression>
 			</textField>
@@ -336,24 +341,30 @@
 				<textFieldExpression class="java.lang.Integer"><![CDATA[((com.mitosis.timesheet.model.CompanyInfoModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).companyInfo).getAccountNumber()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="393" y="123" width="152" height="37"/>
+				<reportElement x="391" y="12" width="152" height="33"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.CompanyInfoModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).companyInfo).getMicrCode()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="122" y="182" width="152" height="33"/>
+				<reportElement x="122" y="182" width="152" height="36"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.CompanyInfoModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).companyInfo).getIfscCode()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="392" y="182" width="152" height="33"/>
+				<reportElement x="391" y="59" width="152" height="33"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.CompanyInfoModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).companyInfo).getSwiftCode()]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band height="54" splitType="Stretch">
+			<textField>
+				<reportElement x="220" y="15" width="100" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
