--- a/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
@@ -4,11 +4,12 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<queryString>
-		<![CDATA[SELECT employee_master.first_name, employee_master.last_name, lob_master.lob_name
+		<![CDATA[SELECT employee_master.id,employee_master.first_name, employee_master.last_name, lob_master.lob_name
 FROM employee_master
 INNER JOIN lob_master
 ON employee_master.lob_id=lob_master.id;]]>
 	</queryString>
+	<field name="id" class="java.lang.Integer"/>
 	<field name="first_name" class="java.lang.String"/>
 	<field name="last_name" class="java.lang.String"/>
 	<field name="lob_name" class="java.lang.String"/>
@@ -75,11 +76,6 @@ ON employee_master.lob_id=lob_master.id;]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{first_name}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="27" y="4" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{employee_id}]]></textFieldExpression>
-			</textField>
 			<line>
 				<reportElement x="148" y="0" width="1" height="34"/>
 			</line>
@@ -99,10 +95,15 @@ ON employee_master.lob_id=lob_master.id;]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{lob_name}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="27" y="8" width="100" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{id}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="41" splitType="Stretch"/>
+		<band height="42" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch">
