commit for employee reports

--- a/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="93"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<queryString>
-		<![CDATA[SELECT employee_master.id,employee_master.first_name, employee_master.last_name, lob_master.lob_name
+		<![CDATA[SELECT (SELECT count(*) from employee_master) as employee_count,employee_master.id,employee_master.first_name, employee_master.last_name, lob_master.lob_name
 FROM employee_master
 INNER JOIN lob_master
 ON employee_master.lob_id=lob_master.id;]]>
 	</queryString>
+	<field name="employee_count" class="java.lang.Long"/>
 	<field name="id" class="java.lang.Integer"/>
 	<field name="first_name" class="java.lang.String"/>
 	<field name="last_name" class="java.lang.String"/>
 	<field name="lob_name" class="java.lang.String"/>
-	<variable name="totalemployees" class="java.lang.Integer" resetType="Group" resetGroup="lob" calculation="Count">
+	<variable name="totalemployees" class="java.lang.Integer" calculation="Count">
 		<variableExpression><![CDATA[$F{id}]]></variableExpression>
 	</variable>
 	<group name="lob">
@@ -62,21 +63,21 @@ ON employee_master.lob_id=lob_master.id;]]>
 					<reportElement x="0" y="0" width="555" height="27"/>
 				</rectangle>
 				<line>
-					<reportElement x="147" y="-7" width="1" height="34"/>
-				</line>
-				<staticText>
-					<reportElement x="174" y="3" width="104" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[Total Employees]]></text>
-				</staticText>
-				<line>
 					<reportElement x="355" y="0" width="1" height="27"/>
 				</line>
-				<textField>
-					<reportElement x="407" y="7" width="114" height="16"/>
+				<staticText>
+					<reportElement x="174" y="5" width="110" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$V{totalemployees}]]></textFieldExpression>
+					<text><![CDATA[Total]]></text>
+				</staticText>
+				<textField>
+					<reportElement x="407" y="5" width="127" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression class="java.lang.Integer"><![CDATA[$V{totalemployees}]]></textFieldExpression>
 				</textField>
+				<line>
+					<reportElement x="147" y="0" width="1" height="27"/>
+				</line>
 			</band>
 		</groupFooter>
 	</group>
@@ -129,7 +130,7 @@ ON employee_master.lob_id=lob_master.id;]]>
 		<band height="42" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch">
+		<band height="55" splitType="Stretch">
 			<textField>
 				<reportElement x="222" y="16" width="100" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
@@ -138,6 +139,26 @@ ON employee_master.lob_id=lob_master.id;]]>
 		</band>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="42" splitType="Stretch">
+			<rectangle>
+				<reportElement x="0" y="15" width="555" height="27"/>
+			</rectangle>
+			<line>
+				<reportElement x="147" y="15" width="1" height="27"/>
+			</line>
+			<line>
+				<reportElement x="356" y="16" width="1" height="26"/>
+			</line>
+			<staticText>
+				<reportElement x="184" y="20" width="104" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<text><![CDATA[Total Employees]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="391" y="20" width="154" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Long"><![CDATA[$F{employee_count}]]></textFieldExpression>
+			</textField>
+		</band>
 	</summary>
 </jasperReport>
