--- a/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
@@ -14,7 +14,7 @@ ON employee_master.lob_id=lob_master.id;]]>
 	<field name="first_name" class="java.lang.String"/>
 	<field name="last_name" class="java.lang.String"/>
 	<field name="lob_name" class="java.lang.String"/>
-	<variable name="totalemployees" class="java.lang.Integer" calculation="Count">
+	<variable name="totalemployees" class="java.lang.Integer" resetType="Group" resetGroup="lob" calculation="Count">
 		<variableExpression><![CDATA[$F{id}]]></variableExpression>
 	</variable>
 	<group name="lob">
@@ -58,7 +58,7 @@ ON employee_master.lob_id=lob_master.id;]]>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="27">
+			<band height="28">
 				<rectangle>
 					<reportElement x="0" y="0" width="555" height="27"/>
 				</rectangle>
@@ -70,14 +70,14 @@ ON employee_master.lob_id=lob_master.id;]]>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Total]]></text>
 				</staticText>
+				<line>
+					<reportElement x="147" y="0" width="1" height="27"/>
+				</line>
 				<textField>
 					<reportElement x="407" y="5" width="127" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression class="java.lang.Integer"><![CDATA[$V{totalemployees}]]></textFieldExpression>
 				</textField>
-				<line>
-					<reportElement x="147" y="0" width="1" height="27"/>
-				</line>
 			</band>
 		</groupFooter>
 	</group>
@@ -155,7 +155,7 @@ ON employee_master.lob_id=lob_master.id;]]>
 				<text><![CDATA[Total Employees]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="391" y="20" width="154" height="20"/>
+				<reportElement x="407" y="20" width="127" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Long"><![CDATA[$F{employee_count}]]></textFieldExpression>
 			</textField>
