--- a/MitosisTimesheet/src/main/webapp/css/style.css
+++ b/MitosisTimesheet/src/main/webapp/css/style.css
@@ -1824,15 +1824,15 @@ transform:scale(1);
 	padding: 5px;
 }
 .lm{
-	padding-left: 6px;
+	padding-left: 12px;
 }
 .emp-det-show{
-	width: 500px; height: auto; display: none; top: 20%; left: 30%; z-index: 105; background: white; position: fixed; padding: 5px; box-shadow: 0px 0px 2px rgba(0,0,0,0.2); 
-	border-radius: 3px;
+	width: 600px; height: auto; display: none; top: 20%; left: 30%; z-index: 105; background: white; position: fixed; padding: 10px; box-shadow: 0px 0px 2px rgba(0,0,0,0.2); 
+	border-radius: 3px; font-size: 20px;
 }
 tbody .scrollit{
-    overflow-y: auto;
-    height: auto;
+    overflow: auto;
+    height: 250px;
 }
 .popuph4{
 	margin-top: 0;
